--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
 
           <div class="card">
-            <img src="./assets/img/matches/matches_1.jpg" alt="" />
+            <img src="./assets/img/matches/matches_2.webp" alt="" />
             <div class="card-body">
               <button class="btn">Transfer</button>
               <h4>Transfer Live: Chelsea in talks over Kimpenbe transfer</h4>
@@ -83,7 +83,7 @@
           </div>
 
           <div class="card">
-            <img src="./assets/img/matches/matches_1.jpg" alt="" />
+            <img src="./assets/img/matches/matches_3.jpg" alt="" />
             <div class="card-body">
               <button class="btn">Transfer</button>
               <h4>Transfer Live: Chelsea in talks over Kimpenbe transfer</h4>
@@ -95,7 +95,7 @@
           </div>
 
           <div class="card">
-            <img src="./assets/img/matches/matches_1.jpg" alt="" />
+            <img src="./assets/img/matches/matches_4.jpeg" alt="" />
             <div class="card-body">
               <button class="btn">Transfer</button>
               <h4>Transfer Live: Chelsea in talks over Kimpenbe transfer</h4>
@@ -107,7 +107,7 @@
           </div>
 
           <div class="card">
-            <img src="./assets/img/matches/matches_1.jpg" alt="" />
+            <img src="./assets/img/matches/matches_5.webp" alt="" />
             <div class="card-body">
               <button class="btn">Transfer</button>
               <h4>Transfer Live: Chelsea in talks over Kimpenbe transfer</h4>
@@ -119,7 +119,7 @@
           </div>
 
           <div class="card">
-            <img src="./assets/img/matches/matches_1.jpg" alt="" />
+            <img src="./assets/img/matches/matches_6.jpg" alt="" />
             <div class="card-body">
               <button class="btn">Transfer</button>
               <h4>Transfer Live: Chelsea in talks over Kimpenbe transfer</h4>
@@ -134,7 +134,7 @@
     </main>
 
     <footer>
-        
+
     </footer>
   </body>
 </html>
