added some content and styles

--- a/index.html
+++ b/index.html
@@ -134,7 +134,17 @@
     </main>
 
     <footer>
-
+      <div class="ftr_content">
+        <h3>Goal</h3>
+        <hr />
+        <div class="ftr_text">
+          <p>Contact Us</p>
+          <p>Term of Service</p>
+          <p>privacy Policy</p>
+          <p>Goal App</p>
+          <p>Goal Live</p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
